# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  project.sh
docs/: Doxyfile
include/project/: add.hpp
src/: add.cpp  main.cpp
tests/: test_add.cpp
